<resources>
    <string name="app_name">Summary_Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment_title">欢迎</string>
    <string name="run_fragment_title">答题中。。。</string>
    <string name="result_fragment_title">挑战成功</string>
    <string name="lose_fragment_title">再接再厉</string>
    
    
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home_message">口算测试</string>
    <string name="home_button">开始测试</string>
    <string name="home_high_score">最高纪录:%d</string>


    <string name="run_score">当前得分：%d</string>
    <!--    <string name="run_first_number">8</string>-->
    <!--    <string name="run_add">+</string>-->
    <!--    <string name="run_second_number">9</string>-->
    <!--    <string name="run_equal_sign">=</string>-->
    <!--    <string name="run_result">\?</string>-->
    <string name="run_hint">开始答题</string>
    <string name="run_textView_5_input_message">请输入答案</string>
    <string name="run_textView_5_correct_message">回答正确！</string>
    <string name="run_button_1" translatable="false">1</string>
    <string name="run_button_2" translatable="false">2</string>
    <string name="run_button_3" translatable="false">3</string>
    <string name="run_button_4" translatable="false">4</string>
    <string name="run_button_5" translatable="false">5</string>
    <string name="run_button_6" translatable="false">6</string>
    <string name="run_button_7" translatable="false">7</string>
    <string name="run_button_8" translatable="false">8</string>
    <string name="run_button_9" translatable="false">9</string>
    <string name="run_button_clear" translatable="false">c</string>
    <string name="run_button_0" translatable="false">0</string>
    <string name="run_button_minus" translatable="false">-</string>
    <string name="run_button_commit">提交</string>
    <string name="run_button_delete">退格</string>

    <string name="win_image_descpriton" translatable="false">Win_Image</string>
    <string name="lose_image_description" translatable="false">Lose_Image</string>
    <string name="win_message">挑战成功</string>
    <string name="lose_message">挑战失败</string>

    <string name="back">返回</string>


    <string name="this_result">你本次的战果:%d</string>
</resources>
