<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.spicytomato.summary_test.HomeFragment"
        android:label="@string/home_fragment_title"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_runFragment"
            app:destination="@id/runFragment" />
    </fragment>
    <fragment
        android:id="@+id/runFragment"
        android:name="com.spicytomato.summary_test.RunFragment"
        android:label="@string/run_fragment_title"
        tools:layout="@layout/fragment_run" >
        <action
            android:id="@+id/action_runFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
        <action
            android:id="@+id/action_runFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.spicytomato.summary_test.ResultFragment"
        android:label="@string/result_fragment_title"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/action_resultFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/loseFragment"
        android:name="com.spicytomato.summary_test.LoseFragment"
        android:label="@string/lose_fragment_title"
        tools:layout="@layout/fragment_lose" >
        <action
            android:id="@+id/action_loseFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>